--- a/config/config.yaml
+++ b/config/config.yaml
@@ -117,7 +117,7 @@ rss:
 #    • 适用场景：避免重复信息干扰
 # ===============================================================
 report:
-  mode: "current"                     # 可选: daily | current | incremental
+  mode: "incremental"                 # 可选: daily | current | incremental
   display_mode: "keyword"             # 可选: keyword | platform
                                       # keyword: 按关键词分组显示（默认）
                                       # platform: 按平台/来源分组显示
@@ -253,7 +253,7 @@ advanced:
     enabled: true                     # 是否启用爬取新闻功能
     request_interval: 1000            # 请求间隔（毫秒）
     use_proxy: false                  # 是否启用代理
-    default_proxy: "http://127.0.0.1:10801"
+    default_proxy: "http://127.0.0.1:10086"
 
   # RSS 设置
   rss:
